# programming-assignment-geometric-algorithms

./: CMakeLists.txt  README.md  generate-input.sh  input.txt  runtime-plot.ipynb  runtime-tester.py
brute-force/: main  main.cpp
data/: runtime-tester-output-1horizontal-brute-force.csv  runtime-tester-output-1horizontal-plane-sweep.csv  runtime-tester-output-1vertical-brute-force.csv  runtime-tester-output-1vertical-plane-sweep.csv  runtime-tester-output-noOverlap-brute-force.csv  runtime-tester-output-noOverlap-plane-sweep.csv  runtime-tester-output-overlap-brute-force.csv  runtime-tester-output-overlap-plane-sweep.csv  runtime-tester-output-ranGenerater-brute-force.csv  runtime-tester-output-ranGenerater-plane-sweep.csv  runtime-tester-output-ranGenerator-plane-sweep.csv
handin/: main.cpp  plane-sweep.cpp
include/: Event.hpp  Point.hpp  RBTree.hpp  Segment.hpp  SegmentParser.hpp
input/: input 1.txt  input 2.txt
input-generators/: 1horizontal.py  1vertical.py  noOverlap.py  overlap.py  ranGenerater.py
input/1horizontal/: input-100.txt  input-1000.txt  input-10000.txt  input-100000.txt  input-10100.txt  input-10200.txt  input-10300.txt  input-10400.txt  input-10500.txt  input-10600.txt  input-10700.txt  input-10800.txt  input-10900.txt  input-1100.txt  input-11000.txt  input-11100.txt  input-11200.txt  input-11300.txt  input-11400.txt  input-11500.txt  input-11600.txt  input-11700.txt  input-11800.txt  input-11900.txt  input-1200.txt  input-12000.txt  input-12100.txt  input-12200.txt  input-12300.txt  (+971 more)
src/: RBTree.cpp  SegmentParser.cpp  main.cpp
(+1300 files in other folders)
